--- a/index.html
+++ b/index.html
@@ -9,6 +9,149 @@
 </head>
 
 <body>
-  
+
+  <header class="main-header">
+    <div class="container grid">
+
+      <nav class="main-nav col">
+        <ul class="unstyled-list">
+          <li><a href="#about-us">About Us</a></li>
+          <li><a href="#our-menu">Our Menu</a></li>
+          <li><a href="location">Location</a></li>
+          <li><a href="subscribe">Subscribe</a></li>
+        </ul>
+      </nav>
+
+    </div>
+  </header>
+
+
+  <!--Hero Area-->
+
+  <section class="hero">
+    <div class="container grid">
+
+      <div class="hero-text col">
+        <h1 class="title-large">Organic natural food</h1>
+        <p class="light">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
+        <a href="" class="btn btn--dark">See our menu</a>
+      </div>
+
+    </div>
+  </section>
+
+  <!--About Area-->
+
+  <section class="about">
+    <div class="grid">
+      <div class="col">
+        <h2>About</h2>
+        <p class="dark">Our Chefs offer you perfect cooking, best served dishes with fresh ingredients and old recipes. We have only carefully sourced and seasonal ingredients in our disposal to make rustic dishes. We provide you with daily self-made bread, sourdough pizza, roasted fish-meat-vegetables and many more.</p>
+        <a href="" class="btn btn.light">Send us a message</a>
+      </div>
+
+      <div class="col img-box">
+        <img src="" alt="image of the chefs">
+      </div>
+
+    </div>
+  </section>
+
+  <!--Today's Specialy Area-->
+
+  <section class="todays-specialty">
+    <div class="container">
+      <h1>Today's specialty</h1>
+      <p class="light">Chicken with vegetables: mashed potatoes, bean pods, croutons, cranberry jam,rosemary</p>
+    </div>
+  </section>
+
+  <!--Menu Area-->
+
+  <section class="menu">
+    <div class="container grid">
+      <h2>Menu</h2>
+
+      <div class="col">
+        <h3>Meat</h3>
+        <p>Chicken Breast......$19.50</p>
+        <p>Chicken Breast......$19.50</p>
+        <p>Chicken Breast......$19.50</p>
+      </div>
+      <div class="col">
+        <h3>Sides</h3>
+        <p>Chicken Breast......$19.50</p>
+        <p>Chicken Breast......$19.50</p>
+        <p>Chicken Breast......$19.50</p>
+      </div>
+      <div class="col">
+        <h3>Pasta</h3>
+        <p>Chicken Breast......$19.50</p>
+        <p>Chicken Breast......$19.50</p>
+        <p>Chicken Breast......$19.50</p>
+      </div>
+
+    </div>
+  </section>
+
+  <!--Delivery Area-->
+
+  <section class="delivery">
+    <div class="container grid">
+      <div class="col">
+        <img src="" alt="woman holding a breakfast meal">
+      </div>
+      <div class="col">
+        <h2>Delivery</h2>
+        <p class="dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut.</p>
+      </div>
+
+    </div>
+  </section>
+
+  <!--Best Service Ever Area-->
+  <section class="service-banner">
+    <div class="container">
+      <h1>Best service ever</h1>
+      <p class="light">Our 3 Michelin Stars ensure that your experience regarding our cuisine will be one that you will not forget.</p>
+    </div>
+  </section>
+
+  <!--Map Area-->
+  <section class="map">
+
+  </section>
+
+  <!--Discount Area-->
+  <footer>
+    <div class="container">
+      <h4>Discount coupon</h4>
+      <p class="light">Enter your email address for a 20% off voucher next time you come visit us.</p>
+      <form>
+        <input type="email" placeholder="janedoe@gmail.com">
+        <button type="submit" class="button_1">Subscribe</button>
+      </form>
+
+      <ul class="unstyled-list social-links">
+        <li><a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+        <li><a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+        <li><a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+        <li><a href=""><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
+      </ul>
+
+      <ul class="unstyled-list nav-footer">
+        <li><a href="">About Us</a></li>
+        <li><a href="">Our Menu</a></li>
+        <li><a href="">Location</a></li>
+        <li><a href="">Subscribe</a></li>
+      </ul>
+
+
+    </div>
+  </footer>
+
+
+
+  <script src="https://use.fontawesome.com/97974f9c24.js"></script>
 </body>
 </html>
