--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Restaurant Website</title>
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/vendor/normalize.css">
 </head>
 
 <body>
