--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container grid">
 
       <nav class="main-nav col">
-        <ul class="unstyled-list">
+        <ul class="unstyled-list usmain">
           <li><a href="#about-us">About Us</a></li>
           <li><a href="#our-menu">Our Menu</a></li>
           <li><a href="location">Location</a></li>
@@ -44,15 +44,15 @@
   <!--About Area-->
 
   <section class="about">
-    <div class="grid">
+    <div class="container grid">
       <div class="col">
         <h2>About</h2>
         <p class="dark">Our Chefs offer you perfect cooking, best served dishes with fresh ingredients and old recipes. We have only carefully sourced and seasonal ingredients in our disposal to make rustic dishes. We provide you with daily self-made bread, sourdough pizza, roasted fish-meat-vegetables and many more.</p>
-        <a href="" class="btn btn.light">Send us a message</a>
+        <a href="" class="btn btn--light">Send us a message</a>
       </div>
 
       <div class="col img-box">
-        <img src="" alt="image of the chefs">
+        <img src="img/about-chefs.jpg" alt="image of the chefs">
       </div>
 
     </div>
@@ -71,9 +71,9 @@
 
   <section class="menu">
     <div class="container grid">
-      <h2>Menu</h2>
 
       <div class="col">
+        <h2>Menu</h2>
         <h3>Meat</h3>
         <p>Chicken Breast......$19.50</p>
         <p>Chicken Breast......$19.50</p>
