--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       <p class="light">Enter your email address for a 20% off voucher next time you come visit us.</p>
       <form>
         <input type="email" placeholder="janedoe@gmail.com">
-        <button type="submit" class="button_1">Subscribe</button>
+        <button type="submit" class="btn" id="submit">Subscribe</button>
       </form>
 
       <ul class="unstyled-list social-links">
