--- a/index.html
+++ b/index.html
@@ -76,21 +76,21 @@
       <div class="col">
         <h2>Menu</h2>
         <h3>Meat</h3>
-        <p>Chicken Breast......$19.50</p>
-        <p>Chicken Breast......$19.50</p>
-        <p>Chicken Breast......$19.50</p>
+        <p>Chicken Breast...............<span>$19.50</span></p>
+        <p>Chicken Breast...............<span>$19.50</span></p>
+        <p>Chicken Breast...............<span>$19.50</span></p>
       </div>
       <div class="col">
         <h3>Sides</h3>
-        <p>Chicken Breast......$19.50</p>
-        <p>Chicken Breast......$19.50</p>
-        <p>Chicken Breast......$19.50</p>
+        <p>Chicken Breast...............<span>$19.50</span></p>
+        <p>Chicken Breast...............<span>$19.50</span></p>
+        <p>Chicken Breast...............<span>$19.50</span></p>
       </div>
       <div class="col">
         <h3>Pasta</h3>
-        <p>Chicken Breast......$19.50</p>
-        <p>Chicken Breast......$19.50</p>
-        <p>Chicken Breast......$19.50</p>
+        <p>Chicken Breast...............<span>$19.50</span></p>
+        <p>Chicken Breast...............<span>$19.50</span></p>
+        <p>Chicken Breast...............<span>$19.50</span></p>
       </div>
 
     </div>
@@ -101,11 +101,12 @@
   <section class="delivery">
     <div class="container grid">
       <div class="col">
-        <img src="" alt="woman holding a breakfast meal">
+        <img src="img/img2.jpg" alt="woman holding a breakfast meal">
       </div>
       <div class="col">
         <h2>Delivery</h2>
         <p class="dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut.</p>
+        <a href="" class="btn btn--light">Order now</a>
       </div>
 
     </div>
