--- a/index.html
+++ b/index.html
@@ -72,21 +72,21 @@
 
   <section class="menu">
     <div class="container grid">
+      <h2 class="col col--full">Menu</h2>
 
-      <div class="col">
-        <h2>Menu</h2>
+      <div class="col col--1-3">
         <h3>Meat</h3>
         <p>Chicken Breast...............<span>$19.50</span></p>
         <p>Chicken Breast...............<span>$19.50</span></p>
         <p>Chicken Breast...............<span>$19.50</span></p>
       </div>
-      <div class="col">
+      <div class="col col--1-3">
         <h3>Sides</h3>
         <p>Chicken Breast...............<span>$19.50</span></p>
         <p>Chicken Breast...............<span>$19.50</span></p>
         <p>Chicken Breast...............<span>$19.50</span></p>
       </div>
-      <div class="col">
+      <div class="col col--1-3">
         <h3>Pasta</h3>
         <p>Chicken Breast...............<span>$19.50</span></p>
         <p>Chicken Breast...............<span>$19.50</span></p>
