--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
   <!--About Area-->
 
   <section class="about">
-    <div class="container grid">
-      <div class="col">
-        <h2>About</h2>
-        <p class="dark">Our Chefs offer you perfect cooking, best served dishes with fresh ingredients and old recipes. We have only carefully sourced and seasonal ingredients in our disposal to make rustic dishes. We provide you with daily self-made bread, sourdough pizza, roasted fish-meat-vegetables and many more.</p>
+    <div class=" grid">
+      <div class="col col--1-2 ">
+        <h2 class="container">About</h2>
+        <p class="dark container">Our Chefs offer you perfect cooking, best served dishes with fresh ingredients and old recipes. We have only carefully sourced and seasonal ingredients in our disposal to make rustic dishes. We provide you with daily self-made bread, sourdough pizza, roasted fish-meat-vegetables and many more.</p>
         <a href="" class="btn btn--light">Send us a message</a>
       </div>
 
-      <div class="col img-box">
+      <div class="col col--1-2">
         <img src="img/about-chefs.jpg" alt="image of the chefs">
       </div>
 
@@ -100,10 +100,10 @@
 
   <section class="delivery">
     <div class="container grid">
-      <div class="col">
+      <div class="col col--1-2">
         <img src="img/img2.jpg" alt="woman holding a breakfast meal">
       </div>
-      <div class="col">
+      <div class="col col--1-2">
         <h2>Delivery</h2>
         <p class="dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut.</p>
         <a href="" class="btn btn--light">Order now</a>
