Footer media queries

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
   <!--Discount Area-->
   <footer>
-    <div class="container">
+    <div class="container container--footer">
       <h4>Discount coupon</h4>
       <p class="light">Enter your email address for a 20% off voucher next time you come visit us.</p>
       <form>
@@ -135,19 +135,23 @@
         <button type="submit" class="btn" id="submit">Subscribe</button>
       </form>
 
-      <ul class="unstyled-list social-links">
-        <li><a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-        <li><a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-        <li><a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-        <li><a href=""><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
-      </ul>
+      <div class="container container--footer--icons">
+        <ul class="unstyled-list social-links">
+          <li><a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+          <li><a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+          <li><a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+          <li><a href=""><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
+        </ul>
+      </div>
 
-      <ul class="unstyled-list nav-footer">
-        <li><a href="">About Us</a></li>
-        <li><a href="">Our Menu</a></li>
-        <li><a href="">Location</a></li>
-        <li><a href="">Subscribe</a></li>
-      </ul>
+      <div class="container container--footer">
+        <ul class="unstyled-list nav-footer">
+          <li><a href="">About Us</a></li>
+          <li><a href="">Our Menu</a></li>
+          <li><a href="">Location</a></li>
+          <li><a href="">Subscribe</a></li>
+        </ul>
+      </div>
 
 
     </div>
