--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
         </ul>
       </nav>
 
+      <div class="nav-toggle">
+        <div class="hamburguer"></div>
+      </div>
+
     </div>
   </header>
 
@@ -157,8 +161,17 @@
     </div>
   </footer>
 
-
-
+<!--jQuery-->
+  <script
+    src="http://code.jquery.com/jquery-3.2.1.min.js"
+    integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+    crossorigin="anonymous"></script>
+  <!--FontAwesome-->
+</script>
   <script src="https://use.fontawesome.com/97974f9c24.js"></script>
+
+  <!--My own scripts-->
+<script src="js/scripts.js"></script>
+
 </body>
 </html>
