--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
       <nav class="main-nav col">
         <ul class="unstyled-list usmain">
           <li><a href="#about-us">About Us</a></li>
+          <li><a href="#specialty">Specialty</a></li>
           <li><a href="#our-menu">Our Menu</a></li>
-          <li><a href="location">Location</a></li>
-          <li><a href="subscribe">Subscribe</a></li>
+          <li><a href="#delivery">Delivery</a></li>
+          <li><a href="#subscribe">Subscribe</a></li>
         </ul>
       </nav>
 
@@ -48,7 +49,7 @@
 
   <!--About Area-->
 
-  <section class="about">
+  <section class="about" id="about-us">
     <div class=" grid">
       <div class="col col--1-2 ">
         <h2 class="container">About</h2>
@@ -65,7 +66,7 @@
 
   <!--Today's Specialy Area-->
 
-  <section class="todays-specialty">
+  <section class="todays-specialty"  id="specialty">
     <div class="container">
       <h1>Today's specialty</h1>
       <p class="light">Chicken with vegetables: mashed potatoes, bean pods, croutons, cranberry jam,rosemary</p>
@@ -74,7 +75,7 @@
 
   <!--Menu Area-->
 
-  <section class="menu">
+  <section class="menu" id="our-menu">
     <div class="container grid">
       <h2 class="col col--full">Menu</h2>
 
@@ -102,7 +103,7 @@
 
   <!--Delivery Area-->
 
-  <section class="delivery">
+  <section class="delivery" id="delivery">
     <div class="container grid">
       <div class="col col--1-2">
         <img src="img/img2.jpg" alt="woman holding a breakfast meal">
@@ -131,7 +132,7 @@
 
   <!--Discount Area-->
   <footer>
-    <div class="container container--footer">
+    <div class="container container--footer" id="subscribe">
       <h4>Discount coupon</h4>
       <p class="light">Enter your email address for a 20% off voucher next time you come visit us.</p>
       <form>
