--- a/index.html
+++ b/index.html
@@ -163,10 +163,7 @@
   </footer>
 
 <!--jQuery-->
-  <script
-    src="http://code.jquery.com/jquery-3.2.1.min.js"
-    integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-    crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
   <!--FontAwesome-->
 </script>
   <script src="https://use.fontawesome.com/97974f9c24.js"></script>
